create github pages

--- a/epk.html
+++ b/epk.html
@@ -204,7 +204,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ATTdJ9suw7DeqB0U8DPt2+8dMVXxwclN9UDF0oibVx9OYJSgoWz/v5hNBbczYvIUA9U5O/SK1igNggnq/6L1vCoHbvLXcMm26lXRSJyOGLnGxRiPFfSvcbfnym7VAZuL.Z4UV2Aj/nuE+JCbNxVeKPC2pu0sWoSYkXP4s+RSlnpHoeMWmgZR0Y4o7Be/b/2Qc5z3aGxH6GVwd84+oT68z7PJeoO/SwKOC/jvAhQD6OwyHfyKJEHTMB0vG6Ecx8MHV">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gWct0KUjfLsEVZauaQfHC3nQVrB4vRcTc0kRSO69FD6/T5ecPY53giOa7vdwsmtitKq7yfvPcVI/VqZxRsmQi8t6qcTPkfePdW6jSOLlTHJTnkyvQbJ57L5NXD97fw88.Aytf3V7NO2DjkI82KzjqKFceuBxCo7Gr4UcuKEOzYTp0J0Kn9CLon4ckuNRJLcaAamrfldVdOniau23DBiEMDlWm+jRxU9+R3fWPFa48OkcHAYvcUhjB4hFg5ggsdDxx">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
@@ -294,7 +294,7 @@ Se preferir, entre em contato pelo nosso whatsapp
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="page7.html" class="text-white"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
