--- a/espacodofa.html
+++ b/espacodofa.html
@@ -162,7 +162,7 @@
                             Blog da Lady</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Vale a pena sacar um pouco do mundo que a Lady Newton vive!<br><br>Confere ai o nosso blog, vamos tentar falar de tudo que rola nos bastidores!</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page7.html" class="btn btn-secondary-outline display-4" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn"></span>Blog da Lady</a></div>
+                    <div class="mbr-section-btn text-center"><a href="blog.html" class="btn btn-secondary-outline display-4" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn"></span>Blog da Lady</a></div>
                 </div>
             </div>
 
@@ -244,7 +244,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5PN29HFWeeXKY8KoIDuHkGM7xbAYI9gjyUqO9xBkgD4//CaHZxfir7TzTuH7BRJNLNib2qeavarC3cBLsgrspuPnHikHbj14OMC7vo/i48XmSn3lXSQq7rO2MGf7qcSW.0xKMn9tES7GsyPJ21OZSFqQui3NqEtdIZ92jIpSWaItpNG2l84jTDtZoZzgI5sF6CKuaBqRY3d4dmwT4FMDJ4rcmVaOstUvIUOKmKJS9hQLWsrhyDpKQMolSQebysxv6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2nONpcZ2+IaTKIu5wT8SEyB1wn4IqAfhaNsmGHY6rOu4Qvs8MbXK5lExcfGJ+AvNJEYp6/2rbK15Q7WMW+0eOIJ8JZXZWxwyI007bSWmuDf6zBi+iiiQ8A3c9Uxg7JEz.5BlTnSwy9/R84K3ERr0wxmk53AWp8xFMbCqfSBhnoGjDV7YueQJ1iS2mzEe6nWAyMY+l0YjVVfEfXiEd64HST0bgfJRYWu7/vUN6L+g4vWbozqResFYT8Z3c+SJ5boJa">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -302,7 +302,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="page7.html" class="text-white"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
