--- a/blog.html
+++ b/blog.html
@@ -126,7 +126,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Você deve estar se perguntando... por que a Lady Newton iria falar sobre esse evento que o The Queen organizou, se nós nem fizemos parte da programação?
 <br>
 <br> É simples, a nossa banda não vive numa bolha. Estamos inseridos em um ecossistema que envolve artistas, produtores, casas de shows e outros parceiros... e no fundo um depende do outro para crescer. As bandas de rock autoral não possuem tanto espaço assim para mostrar o seu trabalho, e quando eu vi que o The Queen abriu as portas para essa proposta de show, fiquei no mínimo curioso. &nbsp;</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page8.html">Ler o Resto!</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="1a-Quarta-autoral-thequeen.html#content3-2r">Ler o Resto!</a></div>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="page7.html" class="text-white"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
