--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
     </div>
 </section>
 
-<section class="popup-builder cid-rR3DtPahik" id="mbr-popup-2k">
+<section class="popup-builder cid-rSKppY2lTA" id="mbr-popup-33">
 
     
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0); top: 0px; right: 0px; bottom: 0px; left: 0px; z-index: 0;">
     </div>
 
-    <div class="modal mbr-popup" tabindex="-1" role="dialog" data-on-timer-delay="1" data-on-exit="true" data-overlay-color="#000000" data-overlay-opacity="0.8">
+    <div class="modal mbr-popup" tabindex="-1" role="dialog" data-on-timer-delay="5" data-overlay-color="#000000" data-overlay-opacity="0.8">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
