create github pages

--- a/5-coisas-que-todo-fa-deve-saber.html
+++ b/5-coisas-que-todo-fa-deve-saber.html
@@ -115,7 +115,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Nós temos algumas peculiaridades como banda,</strong> e nada mais justo do que explicar elas para todos os fãs que pegaram o bonde andando. Afinal desde 2017 a Lady vem se apresentando ao vivo nos bares de Recife e chegamos recentemente a marca de 1.000 seguidores no Instagram (<a href="http://instagram.com/ladynewtonoficial" target="_blank" class="text-secondary">@ladynewtonoficial</a>) .&nbsp;<br><span style="font-size: 1rem;">É de se esperar que você não conheça tudo da banda, e nesse post eu separei as 5 coisas mais importantes quando o assunto é Lady Newton.&nbsp;</span><br></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Nós temos algumas peculiaridades como banda,</strong> e nada mais justo do que explicar elas para todos os fãs que pegaram o bonde andando. Afinal desde 2017 a Lady vem se apresentando ao vivo nos bares de Recife, e chegamos recentemente a marca de 1.000 seguidores no Instagram (<a href="http://instagram.com/ladynewtonoficial" target="_blank" class="text-secondary">@ladynewtonoficial</a>) .&nbsp;<br><span style="font-size: 1rem;">É de se esperar,portanto, que você não conheça tudo da banda. Nesse post eu separei as 5 coisas mais importantes quando o assunto é Lady Newton.&nbsp;</span><br></p></div>
         </div>
     </div>
 </section>
@@ -145,7 +145,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 66%;">
-            <img src="assets/images/hq-lady-1366x768.png" width="1400" alt="" title="">
+            <a href="historia.html" target="_blank"><img src="assets/images/hq-lady-1366x768.png" width="1400" alt="" title=""></a>
             
         </div>
     </figure>
@@ -176,8 +176,11 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 40%;">
-            <img src="assets/images/whatsapp-image-2020-03-09-at-14.57.18-1080x960.jpg" width="1400" alt="" title="">
-            
+            <a href="https://youtu.be/-cjpOyy6-50" target="_blank"><img src="assets/images/whatsapp-image-2020-03-09-at-14.57.18-1080x960.jpg" width="1400" alt="" title=""></a>
+            <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                <div class="container pb-5 mbr-white align-center mbr-fonts-style display-1">
+                    Veja a entrevista!</div>
+            </figcaption>
         </div>
     </figure>
 </section>
