create github pages

--- a/1a-Quarta-autoral-thequeen.html
+++ b/1a-Quarta-autoral-thequeen.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/1a-Quarta-autoral-thequeen-meta.jpg">
+  <meta property="og:image" content="assets/images/1a-Quarta-autoral-thequeen-meta.jpg">
+  <meta name="twitter:title" content="[blog] The Queen abre as portas para o Rock Autoral">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
   <meta name="description" content="Estreia da Quarta Autoral com as bandas Paranozes, Baha! e Duque de Arake....Você deve estar se perguntando... por que a Lady Newton iria falar sobre esse evento que o The Queen organizou, se nós nem fizemos parte da programação?
