--- a/5-coisas-que-todo-fa-deve-saber.html
+++ b/5-coisas-que-todo-fa-deve-saber.html
@@ -5,9 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/5-coisas-que-todo-fa-deve-saber-meta.jpeg">
+  <meta property="og:image" content="assets/images/5-coisas-que-todo-fa-deve-saber-meta.jpeg">
+  <meta name="twitter:title" content="[blog] 5 coisas que todo fã deve saber sobre a Lady Newton">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
-  <meta name="description" content="Site Creator Description">
+  <meta name="description" content="Nós temos algumas peculiaridades como banda, e nada mais justo do que explicar elas para todos os fãs que pegaram o bonde andando. Afinal desde 2017 a Lady vem se apresentando ao vivo nos bares de Recife, e chegamos recentemente a marca de 1.000 seguidores no Instagram (@ladynewtonoficial) . 
+É de se esperar,portanto, que você não conheça tudo da banda. Nesse post eu separei as 5 coisas mais importantes quando o assunto é Lady Newton. ">
   
   <title>[blog] 5 coisas que todo fã deve saber sobre a Lady Newton</title>
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
@@ -242,7 +247,7 @@
             <div class="image-block" style="width: 32%;">
                 <img src="assets/images/whatsapp-image-2020-03-09-at-15.00.18-710x1170.jpg" width="1400" alt="" title="">
                 <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                    <div class="container pb-5 mbr-white align-center mbr-fonts-style display-5">Nunca mande esse papel pra gente!</div>
+                    <div class="container pb-5 mbr-white align-center mbr-fonts-style display-1">Nunca mande isso!</div>
                 </figcaption>
             </div>
     </figure>
