--- a/conhecaladynewton.html
+++ b/conhecaladynewton.html
@@ -221,11 +221,11 @@
                 <div class="align-left aside-content">
                     
                     <div class="mbr-section-text">
-                        <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-5">Recomendamos você ver os nossos vídeos, para escutar a banda tocando e virar de vez um fã da Lady Newton!</p>
+                        <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-5">Recomendamos você ler esse post do nosso blog, onde a gente conta mais peculiaridades da banda!</p>
                         
                     </div>
                     <!--Btn-->
-                    <div class="mbr-section-btn pt-3 align-center"><a href="videos.html" class="btn btn-secondary display-4"><span class="mbri-video mbr-iconfont mbr-iconfont-btn"></span>Acervo de Vídeos da Lady</a></div>
+                    <div class="mbr-section-btn pt-3 align-center"><a href="5-coisas-que-todo-fa-deve-saber.html" class="btn btn-secondary display-4" target="_blank"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span><font face="MobiriseIcons"><br></font> 5 coisas que todo fã precisa saber sobre a Lady!</a></div>
                 </div>
             </div>
         </div>
