--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/blog-meta.jpg">
+  <meta property="og:image" content="assets/images/blog-meta.jpg">
+  <meta name="twitter:title" content="Blog">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
   <meta name="description" content="Aqui é um espaço para os nossos fãs entrarem no mundo da banda pela perspectiva dos membros da Lady Newton. É tanta coisa para contar que vocês nem vão acreditar!  ">
