--- a/kitdofa.html
+++ b/kitdofa.html
@@ -106,7 +106,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 100%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/FZ-F1oz7RrE?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/FZ-F1oz7RrE?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=FZ-F1oz7RrE" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
