--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -181,7 +181,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 135%;">
-                      <a href="http://instagram.com/baha.oficial" target="_blank"><img src="assets/images/whatsapp-image-2020-04-06-at-10.31.12-720x1280.jpg" alt="A Saga do Remoso" title="Baha! (@baha.oficial)"></a>  
+                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/whatsapp-image-2020-04-06-at-10.31.12-720x1280.jpg" alt="A Saga do Remoso" title="Baha! (@baha.oficial)"></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -256,7 +256,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E49CgxZYL7YfxkFBWj8Jnv6OVcu489zO/Yi5y7kuivT1tLHXuI4Aj8erVDXYvxfoaiJkr5O0+W8h7Rq3wTktxKDmYCddy72ZS2SoDd4Cv8RcV5rNXv+ohI00+eS5EHYd.STDBtCud26++PzyyhS0MxU+2nVbY6DpeNqzmTxKCghfRv8vFRxFBaFAUaFFZnmqcOz4OCSgCmRha4kHOUPM9VW7HzQkraup8aY343ock0bwLubmuJQKnw8cQcZlZ4U2D">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jfp0G97XDhQyEEgdkS/ncqBxoN/IBuEeCQw32tic75WxCqj9jLRxv4dKqsynB/kjim+VuHOjwID3dy509h9fVgCGfL+K9KooPtUoZsCuO50L6yoTQo/Kjp0xt7n4WRDN.i9ko6/cpas78p/Wag8YA6qHKJ6aQVSCOL3Fx/Mc6+poobM3JOvanks0TVU13PQAvqO3rSbRoZb2gia6fQVP1EnJ8m+IzzIlJEInd07c52GZLQRQ2BOZxKa2XBrQWhj+v">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
