create github pages

--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -180,8 +180,8 @@
         <div class="media-container-row">
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
-                    <div class="mbr-figure" style="width: 135%;">
-                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/whatsapp-image-2020-04-06-at-10.31.12-720x1280.jpg" alt="A Saga do Remoso" title="Baha (@baha.oficial)"></a>  
+                    <div class="mbr-figure" style="width: 130%;">
+                      <img src="assets/images/whatsapp-image-2020-04-06-at-10.31.12-720x1280.jpeg" alt="" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -256,7 +256,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eL3ejKqaXE+5ODVdGnSDGqISc7cvAbCQKtFnjaXmVQmUAQFy1CYaqROWk2T9xcf8cKqWFnvLEdlEgBeUjc6MynY0wsgdHDI4pd4D8drE9kagRMltKSJHIPngYW3DBSP8.EtuCB2TdHDtpC7Ki+CJr/5m2t8rAg05jZQDWske2zlQeK3FBeuZiUjwaRbPcYDtL27ALEcMbbrXSJjCo9pO1MDTPec6wkbxQUsYydGGXbCYqNL/PSqOL1oMJefCKLgZF">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VqWo3PDLhKxnDj5KdDau70tHlrMVQCyLVQIG+iCp+PzKjtkbnRiLGY75vyhmcqnPCa5tHtvOvhgFB89fTn1dXN50f938ln1aDWvYG6Sftiwo84BOtZSe4pKyrAEa72tz.PB5s/p00o+lCbAke9K1+HZ2dZ3HTIoXhCsOiJpfbAS9CyozHVuidTqrFl4s5Q5irWEgsyllWVTfJ58xB3QeCc/GMVCRjJppsVa1qaaQr0Y4RWJRVLfue3dzvyp4lpdJW">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
