create github pages

--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -181,7 +181,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 120%;">
-                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/baharemoso-680x1199.jpeg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
+                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/baharemoso-680x1199.jpg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -261,7 +261,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bCQ08llq2vlyYAGcSKsyhYuMsVNzQLZz+kSQO3U9w4IMe7WsnU4tHIg1YwAXLKXscpUectSv+rMTn9oYmxwHSXPNHdiUoj0emBaXeBgAjOnF7ccTYfHeRw+ufOOY4dgD.UAKQxl2521UZzNquD7nCgCg9T1ab39mMwL1GWMFxqmXEQqgtU1sCCzYfc9V6z2Ija63eHA9XcOXezvkoYUFHm8ShNTueDr23BwTO8nBim5y5hlaAjp/1oC9Ee4WZEkw4">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yHlqCKTEZJVXsmuGCKr4nnR+/t/JKAndwc9nQ4ltB5/5DZeAmVyZ9t/imjcK1Biv1acgtG2+JxsDvkuNAMBh910KjHsXyf1Uwf9EtakREIGHz37/krf0vGQT+VEiLELC.NXVnDhU4RrKFn5FuSw/gUmgQOC0i6wXSU0tgDkG6bt1Fs0VQyfCklvnCjXaxPgjtpD67YZTqkUJrD0IugggOhwKtrjYSwn8Qfdw1j5a4nKriFQGukR5y00kvbDpDm3Xs">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -392,7 +392,7 @@
         </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-4i" data-rv-view="68" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-4i" data-rv-view="75" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
