create github pages

--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -181,7 +181,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 105%;">
-                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/123-632x1124.jpg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
+                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/123-632x1124.jpeg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -261,7 +261,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VhaGONn9zFJmGQSK2fGptFIHlIU+pDbvdD7FbLx4Vvb2nJj0Ws0fteMovHplBbEPTa7WmGTM72DYGVSNgpoo7Qhds3ro0kji7hWTc32pofGlt3AsfShCoIyexEK0DGJW.o/knsptxJcmWALYo4693+zRqk/pLMij7bofJVu/8705HtSbZNRs72yr4LrfW7NY1AsaTsDYOiuf4Ngga0B1deWOxTUR5SfB3xMKOWNrl2Nds5GVAxkqu1dCeVab7fg2z">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p5hIrvxBH/AC+CYXM1mvoMHUDx4sNJCuFg7oEHelzRkphaHKO1vG0TZwOOHrwN99A9bfS+0zKh5IW8IvSf/k6B7t8OzrHWO/UkOugZeODpXQjIAWAPly1qXgOysZFuYz.FjUWFy88/hbkVkYFIr8Agyf9yY3iXLYYokG9AkUyI/IUWbPe6qhhaJ/B7JUrvvfT4PfnxGst9uIy1Fq1iTZ9a7X0/66YhQS3sdJ4sfp2saMNXVBjm6Pe5qjVasZhX0lp">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
