--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -181,7 +181,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 105%;">
-                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/123-632x1124.jpeg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
+                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/123-632x1124.jpg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -261,7 +261,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p5hIrvxBH/AC+CYXM1mvoMHUDx4sNJCuFg7oEHelzRkphaHKO1vG0TZwOOHrwN99A9bfS+0zKh5IW8IvSf/k6B7t8OzrHWO/UkOugZeODpXQjIAWAPly1qXgOysZFuYz.FjUWFy88/hbkVkYFIr8Agyf9yY3iXLYYokG9AkUyI/IUWbPe6qhhaJ/B7JUrvvfT4PfnxGst9uIy1Fq1iTZ9a7X0/66YhQS3sdJ4sfp2saMNXVBjm6Pe5qjVasZhX0lp">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="02eJqRQQsnBEquK4yJgXwQIUt8UZsMSyCyHhiYUR+L/Mn/o6xScmhQknuAM2go1yxLDNN1GaC4NydWam1/LI0DXIlwZfQOX8p4IkdR0dZ/IX7sfHUuwYXNfJTM2+vKnF.uA3cTwq0w2mSjGnGMMOTuHLGXER5J1iRaSczPUN6LK06xyyV8C3h40kGdgMXbLVmVTSa+n20wMsN1242oCFQCmfYnLWwFQeis44KnmoEpfD5h5kYrBp46jbz1ej2QaTF">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
