create github pages

--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -11,7 +11,13 @@
   <meta name="twitter:title" content="[blog] 5 clipes para maratonar">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
-  <meta name="description" content="==em construção==">
+  <meta name="description" content="O Corona vírus pegou todo mundo de surpresa, e o maior desafio da nossa geração é se manter tranquilo em casa enquanto o mundo inteiro parece desabar. Mas nada de apocalipse, esses tempos de quarentena são uma excelente oportunidade para sentar no sofá e acabar as séries acumuladas, ler um livro e escutar boa música!  Pensando nisso, eu decidi reservar esse post de blog para te fazer conhecer 5 clipes incríveis, que contemplam as músicas autorais de amigos da Lady Newton. Esses clipes tem uma história massa por trás e minha missão hoje é tentar descrever em palavras a ideia por trás da produção. Então separa a tua pipoca e, nem se preocupe que eu não vou dar spoilers. Que comece a maratona!
+
+Clipes: Malakoff - Liberta
+Baha! - Grita meu nome
+Cauê Castro - Brightside
+Breno Hoc - Sorte
+Cartada - Cartada Final">
   
   <title>[blog] 5 clipes para maratonar</title>
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
@@ -33,23 +39,7 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <!-- Facebook Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '2246962085406498');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=2246962085406498&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
+  
 
 </head>
 <body>
@@ -181,7 +171,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 105%;">
-                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/123-632x1124.jpg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
+                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/123-1-632x1124.jpeg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -261,7 +251,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="02eJqRQQsnBEquK4yJgXwQIUt8UZsMSyCyHhiYUR+L/Mn/o6xScmhQknuAM2go1yxLDNN1GaC4NydWam1/LI0DXIlwZfQOX8p4IkdR0dZ/IX7sfHUuwYXNfJTM2+vKnF.uA3cTwq0w2mSjGnGMMOTuHLGXER5J1iRaSczPUN6LK06xyyV8C3h40kGdgMXbLVmVTSa+n20wMsN1242oCFQCmfYnLWwFQeis44KnmoEpfD5h5kYrBp46jbz1ej2QaTF">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UcEqal8lQK4ChF5FV8ZBu0Ukcy9UcmJ5Pf+JrpdEcodidYcyP4eeoZ+LuDcZp333hXlyqa+vMb8zuIwAN1nKS/8iZOVReM4y2eXqCfKvadpWtUyqH9zUM6kZWQp6w1Fs.BXPjM3j0nnM037A42+RQ7hDrKvmbvMoxzNfciXskNCirYqTNaPvrsOL5sJoOBbWWFRM19tT2q0CA2So/x6GmB6XCE2h4e0samloKl169Q83Oq9Oc3bNlKlfDyJ1qC4VR">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
