--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -171,7 +171,7 @@ Cartada - Cartada Final">
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 105%;">
-                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/123-1-632x1124.jpeg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
+                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/whatsapp-image-2020-04-06-at-16.12.04-632x1124.jpg" alt="saga do remoso" title="Baha (baha.oficial)"></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -251,7 +251,7 @@ Cartada - Cartada Final">
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UcEqal8lQK4ChF5FV8ZBu0Ukcy9UcmJ5Pf+JrpdEcodidYcyP4eeoZ+LuDcZp333hXlyqa+vMb8zuIwAN1nKS/8iZOVReM4y2eXqCfKvadpWtUyqH9zUM6kZWQp6w1Fs.BXPjM3j0nnM037A42+RQ7hDrKvmbvMoxzNfciXskNCirYqTNaPvrsOL5sJoOBbWWFRM19tT2q0CA2So/x6GmB6XCE2h4e0samloKl169Q83Oq9Oc3bNlKlfDyJ1qC4VR">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ayTDuTmfRTXK2L7S+IZySHZ9z13BJQpNU4H8wF5talHCEtb8eaabhwLIfEwxpTBkLlYfQ6DEkOWhabvkSDpxWl3syZ7MUCpg920SNoMiyF9qgCeqh83nGUSpoQEQC5bw.U3SJRIepEhBFnArq9MmExh1Z78e8sd6uB5O5JZFIzbrdaQMbu3C1a0Vd9aCp/qGIMM/o0CmZ5xu7/w6mwRGpF0eIVXcSGUe5vyQ9HfZNO/pnXIBWrVqUpc1svlFAFg34">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
