--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -171,7 +171,7 @@ Cartada - Cartada Final">
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 120%;">
-                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/baha3-680x1209.jpg" alt="Cauê todo melado" title="Cauê Castro (@castrocaue)"></a>  
+                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/baha-612x876.png" alt="Cauê todo melado" title="Cauê Castro (@castrocaue)"></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -246,7 +246,7 @@ Cartada - Cartada Final">
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IoDKhZMDIapQPibSY7t5FJ/YxJOv/zpv92xkP9E+PNtJGkpa/5nUSS8VtBdXmoJWBAbvO/QtlYiXybs0Pq2SegaV+o8i+oR51ixfGObJKtCu7lU/myZjgfciCr7wtnVX.edd1bdbGZm21q9lurnkw56dH7yZBsesF5hv+rUegG0oofsA+Ndfs1+zRj01J7IIbjUm6NWWcG0VjBIm4CDVkGfZkfyyk8hiPUdarNO7MGInsrC5/JPDwY7xR3GeA/6nj">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="faPXeLKMcb+9HPPSnVRqU/b/EZOhHILQWeeKmC9fX3otNrmsroH+o30foj2ddE230/ygaoQAeTl9VNLT6IjgAJPk4ZgNAPVJ4fCdcU0f9AgvxlyiXVGSysllXG1f2hq6.6l8D7BayAhNmRB7ob2qsD/BjKnMQ53D/5Vp0JJjBpJ38KSvQQMqawQazKMpeO+Jbt3BSBQ1D6sJWaSzM4SV+tzFcHbmmaZPi9En7hrQOmQr2yvuT9cTrsxciZqiKWq9E">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
