create github pages

--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -171,7 +171,7 @@ Cartada - Cartada Final">
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 115%;">
-                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/baha3-1-680x1209.jpg" alt="Baha" title=""></a>  
+                      <a href="http://instagram.com/baha.oficial"><img src="assets/images/baha-612x876.png" alt="Baha" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -246,7 +246,7 @@ Cartada - Cartada Final">
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QTw2p1PRF2CThZ70S8GZtsJAQHu+EfkNGgXGUboWWotPbWS+VXwWiEpA4OLkLNz/tSVyw3yCSKulF5qN1PPL7fPY3H+K0eEMbOXFKKN/4O1QTCu65YSQEXqq+sxze2nx.OQ5Ugesya3gHy6lbIZceKV/uNel+dylKqQSPC0y2wCOjuhQAww1dmX3ulMX9wcxMV0FFf8UtvH1aMhPLVKlDISEtTwNY3ieeWxyF/qWYiyyu3N28PWqGGVnuvl0T1KIr">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vWj1xJq04H/jth8tEp8raB2c7i6P5+Q0kjLcJ6GT+ZPslsDLbJe8Jdn5F+LmatYKVDD+hNSkLKdZnuT79+UtehTMmeDirWqe5FXpyjxeHzrUw5WFMrrU+t4f0M6OgQ60.KBj2qBGQ15TOxu4ANcjL/EwOf6lCKDI3XX4lCfNlgeHPhslkWCHmfC3Rs0LLL3qjp73RqnvplFNS51maAmROsx2di8de42d3TJ0z7lh2MQXo2/mV2Kob/Zlb3QE5Blzq">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
