create github pages

--- a/cenarecife.html
+++ b/cenarecife.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Cena Autoral Recifense">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
-  <meta name="description" content="Essa é nossa modesta contribuição para a Cena Autoral Recifense, estamos catalogando todos os lançamentos a partir de 2020 de bandas e músicos amigos da Lady Newton. Tudo em ordem cronológica e com links para acesso! ">
+  <meta name="description" content="Essa é a modesta contribuição da Lady Newton para a Cena Autoral Recifense, estamos catalogando todos os lançamentos a partir de 2020 de bandas e músicos amigos da Lady. Tudo em ordem cronológica e com links para acesso! ">
   
   <title>Cena Autoral Recifense</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
