create github pages

--- a/cenarecife.html
+++ b/cenarecife.html
@@ -195,7 +195,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 30%;">
-                      <a href="https://open.spotify.com/album/3lwiJIqE8SEqlDQ0Kbo0X0?si=SQFD3te8S46MJKxj1DWUIw" target="_blank"><img src="assets/images/whatsapp-image-2020-04-08-at-13.25.23-224x223.jpg" alt="" title=""></a>  
+                      <a href="https://open.spotify.com/album/3lwiJIqE8SEqlDQ0Kbo0X0?si=SQFD3te8S46MJKxj1DWUIw"><img src="assets/images/whatsapp-image-2020-04-08-at-13.25.23-224x223.jpeg" alt="" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -261,7 +261,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 30%;">
-                      <a href="https://open.spotify.com/track/7KwBhh3GBjRSlhkrjrPCdf?si=lJ0jW-jvQkG9C-5hn1OYQA" target="_blank"><img src="assets/images/whatsapp-image-2020-04-08-at-13.51.44-224x224.jpg" alt="" title=""></a>  
+                      <a href="https://open.spotify.com/track/7KwBhh3GBjRSlhkrjrPCdf?si=lJ0jW-jvQkG9C-5hn1OYQA"><img src="assets/images/whatsapp-image-2020-04-08-at-13.51.44-224x224.jpeg" alt="" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -349,7 +349,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 30%;">
-                      <a href="https://open.spotify.com/track/7KwBhh3GBjRSlhkrjrPCdf?si=hJAXmb9iQvCllRk1-lVr9A" target="_blank"><img src="assets/images/whatsapp-image-2020-04-08-at-13.51.44-224x224.jpg" alt="" title=""></a>  
+                      <a href="https://open.spotify.com/track/7KwBhh3GBjRSlhkrjrPCdf?si=hJAXmb9iQvCllRk1-lVr9A"><img src="assets/images/whatsapp-image-2020-04-08-at-13.51.44-224x224.jpeg" alt="" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
