create github pages

--- a/cenarecife.html
+++ b/cenarecife.html
@@ -151,7 +151,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 30%;">
-                      <a href="https://open.spotify.com/track/06MM4nMbTXzDMn2HYphj2h?si=qYaokwgTQyCUtZr-hKmW-w" target="_blank"><img src="assets/images/whatsapp-image-2020-04-08-at-14.26.55-224x228.jpg" alt="" title=""></a>  
+                      <a href="https://open.spotify.com/track/06MM4nMbTXzDMn2HYphj2h?si=qYaokwgTQyCUtZr-hKmW-w"><img src="assets/images/whatsapp-image-2020-04-08-at-14.26.55-224x228.jpg" alt="" title=""></a>  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
