create github pages

--- a/epk.html
+++ b/epk.html
@@ -204,7 +204,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ufXnX91mevdxj+Tli6z4btq+w4sToqT2vNJOsDP9ie7tfT/nC3rHWXUETtf8BAxeUqWfk26cAvO3WMouhgRr2jpQ268PqrVLa2d228cKs9V9aLlscFMhRWDcqY3YRzQX.P+n6xLUUwp41Q/Xx5v+5bUJV7zz76FSeH71q/DOKCTy7+xxUxSlswyQaEnhQdFNNlnnlu8Hqen2aOeiLq0G8e61Ux4AFk1oc0ER4u+iyi7pfXDB3h9p2HFoznfaFouOu">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="moml15NjyKBcadWHkof6pkNWKUyDWBuLnHUKsjGp2tQ2YiQggv/k+aFIYnVp1g8XzDKQb8zfk5fJ1DqKzT5W8vverMKUXa+jWP8NOJ2yGZ00RVt7CYBzhZO+S7YEyjt2.yp1gVS+CjmJcLrIj5g1ynqdAFF6BxMLI+hVRxwnU1LpqtKeGPMKJ0SZXdcYrt9lRZzBZne5R73MoYYkYUDREnEJSOWUmcp85mJ4IH/RdzMT5aE3FjqBvoVYREgmuv1Wv">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
@@ -294,7 +294,7 @@ Se preferir, entre em contato pelo nosso whatsapp
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" class="text-white" target="_blank"><strong>Cena Recifense</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
