--- a/5_clipes_para_maratonar.html
+++ b/5_clipes_para_maratonar.html
@@ -246,7 +246,7 @@ Cartada - Cartada Final">
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FrFFzE99udDK3iexfnAhYqTxFowYmBVE0YT8Q/LmjiHlguKaUQv6SfLXivIm0cW1qSR9a43TZnG7N1MzhFTSzHUu0+EMfqoe/aMN5oHQrK0+NKS6AG2A2WvtM4uwr6+8.cG5m/+/Siiw8VXX10GDkgNsZJr3bNth7Wf9XHqhiuIWPtC7uxtW/oQrNK37VB+NLDb01wI2rZrXlbJpbGDzol2g2zkovIqx/EKBeIaTNePc71DTolepnfYbvfOpnuN9I">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="akKtROGmQJMzQD6oMUqo8UfHT+zamoIicZBORBn5h5CEnyI/6wlMT78PmQVE/c7MkInmDGg95LtxFy30uDfrkC4XcnieVaE6XPDZa1kZXtXpTLUnLCS+H65woHMc2qvS.WIPUnRpNkqHeGKHMQKc3Rl8nzVmhaUFp3/G7lzvuOjHEYfUBlTNswyuzSU+9fCDrygQhaps+4b1TUgVQr0r4/4Nod3aqvuekgm2faQYkRPhXI5iRn4foSBzOwoQd3pfF">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -452,7 +452,7 @@ Cartada - Cartada Final">
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" class="text-white" target="_blank"><strong>Cena Recifense</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
