--- a/espacodofa.html
+++ b/espacodofa.html
@@ -259,7 +259,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gg0Dvg8eodzWI+WKIlAnky1ebVnig6ow4VBpg5TS0e5HEFLNpnzrTeZkvidgD7RBn8d/L1o8nnfbjFI85YUqv7IAuuxnUtT2G57oM/IUxxum6GpPgUvlKh82Fb3J3cXP.3s5wsdjrWuLJbhm1H0Iw12tcjx/CKnHUl/GJnMUgcQ/k9ccPirifgXD64ZTC59StFirTV24gjcs2HZtzfpjkneEckpr55i86yVwYKrjpUdgKZJzPMFruwRuAAihDLAS5">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nM3bl/iPszD/VpOC8y/8c8gKqazMq+d2JjShBuwp+piljC5fhdgDy2an6lTarughJ7OOKhHYhKKrWUnff8t5ijOvDiwGH8dc/JFj3RvkcNHJ/B691QqJczjEngeVtjhb.Ni1OVgVEanMC7YuaCbJbKhf55F8cjoiZbVK0hB8zVVnEeNqSnp2vpKYrLRQCt8UIQZERcZQplq+atXTda3tKxWiURYnxGORporVgbsrMDzD8N+NOo6qBoA2jFPAXJAh+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -317,7 +317,7 @@
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="blog.html" class="text-white" target="_blank"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="cenarecife.html" class="text-white" target="_blank"><strong>Cena Recifense</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
